Add schedule page for future building

--- a/schedule.html
+++ b/schedule.html
@@ -1,10 +1,10 @@
-  <!doctype html>
+   <!doctype html>
 
 <html>
     <head>
         <meta charset="utf-8">
 
-        <title>Music Resources</title>
+        <title>Performance Schedule</title>
 
         <!-- Load external CSS styles -->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
@@ -42,38 +42,18 @@
                     <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="./music.html">Music</a>
+                    <a class="nav-link " href="./music.html">Music</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./schedule.html">Schedule</a>
+                    <a class="nav-link active" href="./schedule.html">Schedule</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./about.html">About</a>
                 </li>
             </ul>
         </nav> 
-<!-- Page Container -->
-<div class="w3-container w3-content w3-margin" style="max-width:1400px;">    
-  <!-- <audio controls src="./jingle-bells.mp3"></audio> -->
-</div>
 
-<div class="w3-container w3-margin">
-    <div id="musicPlayer" class="w3-card w3-center mx-auto" style="max-width:300px;">
-        <img id="songImage" src="./music/2026-choral-selections.jpeg" style="width:100%">
-        <h3 id="songName" style="padding-top:16px;">Song Title</h3>
-        <p id="songArtist">Artist/Arranger</p>
-
-        <input id="songSlider" type="range">
-
-        <div id="musicButtons" class="w3-padding w3-padding-16 w3-flex" style="justify-content: space-between; align-items: center;">
-            <i id="shuffleSong" class="fa-solid fa-shuffle"></i>                
-            <i id="prevSong" class="fa-solid fa-backward-step fa-2x"></i>
-            <i id="playPauseSong" class="fa-solid fa-circle-play fa-3x"></i>
-            <i id="nextSong" class="fa-solid fa-forward-step fa-2x"></i>
-            <i id="repeatSong" class="fa-solid fa-repeat"></i>
-        </div>
-    </div>
-</div>
+        
 <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
     <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-xlarge" style="background-color: ghostwhite;">
         <i class="fa-brands fa-facebook w3-hover-opacity"></i>
