--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Steadfast Music</title>
+        <title>About Our Ministry</title>
 
         <!-- Load external CSS styles -->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
