Fix index title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Blank template</title>
+        <title>Steadfast Music Ministries</title>
 
         <!-- Load external CSS styles -->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
