--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </ul>
         </nav> 
 <!-- Page Container -->
-<div class="w3-container w3-content bgimg-1 bgimg-format" style="max-width:1400px;">    
+<div class="bgimg-1 bgimg-format"><div class="w3-container w3-content ">    
   <!-- The Grid -->
   <div class="w3-row">
     <!-- Left Column -->
@@ -101,7 +101,7 @@
         </section>
     </div>
   </div>
-</div>
+</div></div>
 <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
     <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-xlarge" style="background-color: ghostwhite;">
         <i class="fa fa-facebook-official w3-hover-opacity"></i>
