Add ACtive Song indicator to song list, links from "at a glance" begin playback on music page

--- a/index.html
+++ b/index.html
@@ -66,9 +66,18 @@
             <div class="card-body">
                 <h4>Upcoming Pieces</h4>
                 <ul>
-                    <li><a href="#">I Will Sing Praise (Feb. 8th)</a></li>
-                    <li><a href="#">A Blessing (Feb. 8th)</a></li>
-                    <li><a href="#">Search Me, Lord (Feb. 18th &amp; 22nd)</a></li>
+                    <li><a href="./music.html?songIndex=2">I Will Sing Praise (Feb. 8th)</a></li>
+                    <li><a href="./music.html?songIndex=1">A Blessing (Feb. 8th)</a></li>
+                    <li><a href="./music.html?songIndex=3">Search Me, Lord (Feb. 18th &amp; 22nd)</a></li>
+                    <li><a href="./music.html?songIndex=4">Hide Me (Mar. 8th)</a></li>
+                    <!--<li><a href="./music.html?songIndex=5">When You Speak to Me (Mar. 22nd)</a></li>
+                    <li><a href="./music.html?songIndex=6">Blessed Is He (Mar. 29th)</a></li>
+                    <li><a href="./music.html?songIndex=7">This Is Our Freedom (Apr. 2nd)</a></li>
+                    <li><a href="./music/easter-cantata-2026.html">The Way, the Truth, the Life (Apr. 5th)</a></li>
+                    <li><a href="./music.html?songIndex=8">Amazing Love (Apr. 12th)</a></li>
+                    <li><a href="./music.html?songIndex=9">Hallelujah (Apr. 26th)</a></li>
+                    <li><a href="./music.html?songIndex=10">Tis So Sweet to Trust in Jesus (May 10th)</a></li>
+                    <li><a href="./music.html?songIndex=11">Holy (May 24th)</a></li>-->
                 </ul>
                 
                 <hr>
