Added Easter Cantata Page and navigation

--- a/music.html
+++ b/music.html
@@ -58,10 +58,14 @@
         <nav class="navbar navbar-expand-sm justify-content-center shadow-sm mb-5" style="background-color: ghostwhite;">
             <ul class="navbar-nav">
                 <li class="nav-item ">
-                    <a class="nav-link active" href="./index.html">Home</a>
+                    <a class="nav-link" href="./index.html">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="./music.html">Music</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown">Music</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./music.html">Music Resources</a></li>
+                    <li><a class="dropdown-item" href="./easter-cantata-2026.html">Easter Cantata Resources</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./schedule.html">Schedule</a>
@@ -157,7 +161,7 @@
         </li>
 
         <li class="list-group-item d-flex">
-          <a class="material-symbols-outlined material-icons" type="button"href=".music/easter-cantata-2026.html">drive_file_move</a>
+          <a class="material-symbols-outlined material-icons" type="button"href="./easter-cantata-2026.html">drive_file_move</a>
           <div class="ps-3"><b>The Way, the Truth, The Life</b> (Apr 5th)<br>
             <span class="small"><i>Easter Cantata by Dennis and Nan Allen</i></span></div>
             <a class="material-symbols-outlined material-icons ms-auto" type="button" href="./music/easter-cantata-2026/The_Way_the_Truth_the_Life_Choral_Book_Samples.pdf" target="_blank">picture_as_pdf</a>
