--- a/about.html
+++ b/about.html
@@ -38,16 +38,20 @@
         <nav class=" navbar navbar-expand-sm justify-content-center shadow-sm" style="background-color: ghostwhite;">
             <ul class="navbar-nav">
                 <li class="nav-item ">
-                    <a class="nav-link active" href="./index.html">Home</a>
+                    <a class="nav-link" href="./index.html">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="./music.html">Music</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Music</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./music.html">Music Resources</a></li>
+                    <li><a class="dropdown-item" href="./easter-cantata-2026.html">Easter Cantata Resources</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./schedule.html">Schedule</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./about.html">About</a>
+                    <a class="nav-link active" href="./about.html">About</a>
                 </li>
             </ul>
         </nav>  
