--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
                 <li class="nav-item ">
                     <a class="nav-link active" href="./index.html">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="./music.html">Music</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Music</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./music.html">Music Resources</a></li>
+                    <li><a class="dropdown-item" href="./easter-cantata-2026.html">Easter Cantata Resources</a></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./schedule.html">Schedule</a>
