--- a/easter-cantata-2026.html
+++ b/easter-cantata-2026.html
@@ -55,7 +55,7 @@
             </div>
         </section>
 
-        <nav class="navbar navbar-expand-sm justify-content-center shadow-sm mb-5" style="background-color: ghostwhite;">
+        <nav class="navbar navbar-expand-sm justify-content-center shadow-sm" style="background-color: ghostwhite;">
             <ul class="navbar-nav">
                 <li class="nav-item ">
                     <a class="nav-link" href="./index.html">Home</a>
@@ -93,19 +93,19 @@
 </div>
 <!-- Page Container -->
 <section class="container">
-    <div class="row pb-5">
-      <div class="col-md-5">
+    <div class="row mt-5">
+      <div class="col-md-5 mb-5">
         <div class=""><img src="./music/easter-cantata-2026/001260469.avif" width="100%"></div>
         
       </div>
-      <div class="col-md-7">
+      <div class="col-md-7 mb-5">
       <h3>The Way, The Truth, The Life</h3>
       <h4><i class="small">An Easter Celebration created by Dennis and Nan Allen</i></h4>
       <p>From Dennis and Nan Allen comes The Way, the Truth, the Life, an Easter musical that reflects how Christ is all things to us ... our Way, our Truth, and our Life. Through Scripture-based narration and songs both new and familiar, we walk through the final moments of Christ’s life, His death, and resurrection. We sit at the Passover table with the disciples and learn that Christ is The Way to eternal communion with the Father and the Son. We go to the garden and learn that we only understand what Christ does for us through The Truth. And we stand at the empty tomb and witness why He is The Life! We celebrate all that He is!</p>
       
     </div>
     </div>
-    <div>
+    <div class="mb-5">
       <ul class="list-group">
         <li id="song12"class="list-group-item d-flex">
           <div class="material-symbols-outlined material-icons" type="button" onclick="changeSongIndex('12')">play_circle</div>
@@ -145,7 +145,7 @@
 
         <li id="song17" class="list-group-item d-flex">
           <div class="material-symbols-outlined material-icons" type="button" onclick="changeSongIndex('17')">play_circle</div>
-          <div class="ps-3"><b>Narration 3</b>)<br>
+          <div class="ps-3"><b>Narration 3</b><br>
             <span class="small"><i>Paraphrased from Matthew 27, Mark 15, Luke 23, John 19</i></span></div>
         </li>
 
