--- a/easter-cantata-2026.html
+++ b/easter-cantata-2026.html
@@ -5,7 +5,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Steadfast Music Ministries</title>
+        <title>Easter Cantata 2026</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 
         <!-- Load external CSS styles -->
         
