--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Steadfast Music Ministries</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
 
         <!-- Load external CSS styles -->
         
@@ -121,7 +122,7 @@
     <div class="col-lg-8 mb-5">
 
 <!-- Post -->
-<section class="card mb-3 filterable-item" data-category="update" style="visibility: visible;">
+<article class="card mb-3 filterable-item" data-category="update" style="visibility: visible;">
     <div class="card-body">
         <div class="d-flex align-items-center">
             <img src="./assets/Samuel_Wigal-_Profile_Pic.png" alt="Avatar" class="" style="width:60px">
@@ -141,10 +142,10 @@
         <span class="badge rounded-pill bg-secondary" type="button" onclick="filterElements('all')">All</span>
         <span class="badge rounded-pill bg-secondary" type="button" onclick="filterElements('update')">Updates</span>
     </div>
-</section>
+</article>
 
 <!-- Post -->
-  <section class="card mb-3 filterable-item" data-category="spiritual-formation" style="visibility: visible;">
+  <article class="card mb-3 filterable-item" data-category="spiritual-formation" style="visibility: visible;">
     <div class="card-body">
       <div class="d-flex align-items-center">
           <img src="./assets/Samuel_Wigal-_Profile_Pic.png" alt="Avatar" class="" style="width:60px">
@@ -172,7 +173,7 @@
         <span class="badge rounded-pill bg-secondary" type="button" onclick="filterElements('all')">All</span>
         <span class="badge rounded-pill bg-secondary" type="button" onclick="filterElements('spiritual-formation')">Spiritual Formation</span>        
     </div>
-  </section>
+  </article>
    
     
     </div>
