--- a/easter-cantata-2026.html
+++ b/easter-cantata-2026.html
@@ -65,7 +65,7 @@
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown">Music</a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="./music.html">Music Resources</a></li>
+                    <li><a class="dropdown-item" href="./music.html">Choir Resources</a></li>
                     <li><a class="dropdown-item active" href="./easter-cantata-2026.html">Easter Cantata Resources</a></li>
                   </ul>
                 </li>
