--- a/schedule.html
+++ b/schedule.html
@@ -44,7 +44,7 @@
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Music</a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="./music.html">Music Resources</a></li>
+                    <li><a class="dropdown-item" href="./music.html">Choir Resources</a></li>
                     <li><a class="dropdown-item" href="./easter-cantata-2026.html">Easter Cantata Resources</a></li>
                   </ul>
                 </li>
